Update requirements.txt for HTTP libraries
Added httpx and h2 for HTTP/2 support, and removed playwright for browser automation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@
 streamlit
 pandas
 
+# HTTP library with HTTP/2 support (for bypassing anti-bot protection)
+httpx
+h2
+
 # Data visualization
 plotly
 
 # Excel export support
 openpyxl
-
-# Browser automation (for bypassing anti-bot protection)
-playwright
 
 # Additional utilities
 python-dateutil
