Update requirements.txt for dependencies
Removed requests and openpyxl; added httpx and h2.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
 # Core dependencies
 streamlit
 pandas
-requests
 
-# Browser automation (REQUIRED - guarantees 99% success)
-playwright
+# HTTP/2 support for better success rate
+httpx
+h2
 
-# Data visualization
+# Data visualization (optional)
 plotly
-
-# Excel export support (optional)
-openpyxl
 
 # Additional utilities
 python-dateutil
